# s2

./: Cargo.toml  index.html  wasmTest.js  wasmTest_bg.d.ts  wasmTest_bg.wasm
src/: canvas.rs  commands.txt  lib.rs  main.rs  nlib.rs  player.rs  server.rs
static/: index.html
