[package]
name = "wasmTest"
version = "0.1.0"
authors = ["Casey Manning <kcgrind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.7"

vessels = { git = "https://github.com/noocene/vessels", features = ['core'] }
serde = "1.0.103"
futures = "0.3.1"
failure = "0.1.6"
ndarray = "0.13.0"

[[bin]]
name = "wasmTest"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"
