[package]
name = "wasmTest"
version = "0.1.0"
authors = ["Casey Manning <kcgrind@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vessels = { git = "https://github.com/noocene/vessels", features = ['core'], rev = "edfe5d3413a8bd4b46bf1bc95ccb1a5863e92342" }
serde = "1.0.103"
futures = "0.3.1"
lazy_static = "1.4.0"
once_cell = "1.3.1"
failure = "0.1.6"
ndarray = "0.13.0"
web-sys = { version = "0.3.35", features = [
    "EventTarget", 
    "MouseEvent", 
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window",
    "console"
    ] }
wasm-bindgen = "0.2.58"
console_error_panic_hook = "0.1.6"

[[bin]]
name = "wasmTest"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"
